# platinum

./: 404.html  CMakeLists.txt  LICENSE  README.md  analysis.md  config.yaml  platinum.cc
config/: config.cc  config.h
core/: acceptor.h  tcp_connection.h  tcp_listen_socket.cc  tcp_listen_socket.h
doc/: cpp_new_fetaures.md  holes_todo.md  key_facilities.md
include/: blocked_queue.hpp  epoll.h  http_affair.h  http_response.h  server.h  socket.h  thread_pool.h
include/socket/: socket.h
include/threadpool/: blocked_queue.hpp  thread_pool.h
reactor/: channel.cc  epoller.cc  event_loop.cc  event_loop.h
src/: CMakeLists.txt  epoll.cc  http_affair.cc  http_response.cc  main.cc  platinum.yaml  server.cc  socket.cc  thread_pool.cc
src/.1.0/: PlatinumServer
src/.1.0/include/: http_affair.h  socket.h
src/.1.0/src/: http_affair.cc  http_response.cc
src/_src_1.0/include/: server.h
src/config/: config.cc  config.h
src/core/: affair.cc  affair.h  platinum.cc  platinum.h  server.cc  server.h
src/core/handler/: fcgi_handler.cc  fcgi_handler.h  handler.hpp  static_handler.cc  static_handler.h
src/include/: config.hpp  fcgi.hpp  http.hpp  net.hpp  utility.hpp
src/net/: acceptor.cc  acceptor.h  address.hpp  connection.cc  connection.h  connector.cc  connector.h  ip_address.cc  ip_address.h  socket.cc  socketops.cc  socketops.h  tcp_server.cc  tcp_server.h  unix_address.cc  unix_address.h
src/protocol/: parser.hpp
src/protocol/fastCGI/: component.cc  component.h  request_builder.cc  request_builder.h  response_parser.cc  response_parser.h
src/protocol/http/: request.cc  request.h  request_parser.h  response.cc  response.h  response_builder.cc  response_builder.h
src/reactor/: channel.cc  channel.h  epoller.cc  epoller.h  event_loop.cc  event_loop.h
src/socket/: socket.cc
src/test/: CMakeLists.txt  connector_test.cc  http_response_builder.cc  platinum.yaml  reactor_socketapi_test.cc  request_builder_test.cc  request_parser_http.cc  response_parse_fcgi.cc  response_parser_test.cc  tcpconnection_test.cc  writequeue_test.cc
src/thread_pool/: thread_pool.cc
src/utility/: dir.cc  dir.h  file_reader.h  logger.cc  logger.h  noncopyable.h
src/utility/buffer/: buffer.cc  task.cc  task.h  writequeue.cc
utility/: log.cc  log.h  log.hpp  noncopyable.h
utility/logger/: logger.cc  logger.h
utility/socket/: ip_address.cc  ip_address.h  socket.cc  socket.h  socketops.cc  socketops.h  tcp_listen_socket.cc  tcp_listen_socket.h
v1.0/src/: http_affair.cc  socket.cc
v2.0/: CMakeLists.txt  config.yaml  platinum.cc
v2.0/config/: config.cc  config.h
v2.0/core/: affair.cc  affair.h  platinum.cc  platinum.h
v2.0/core/handler/: static_handler.cc  static_handler.h
v2.0/net/: Server.cc  Server.h  acceptor.cc  acceptor.h  address.hpp  connection.cc  connection.h  connector.cc  connector.h  ip_address.cc  ip_address.h  socket.cc  socket.h  socketops.cc  socketops.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h  unix_address.cc  unix_address.h
v2.0/protocol/: parser.hpp
v2.0/protocol/fastCGI/: base.h  component.cc  component.h  request_builder.cc  request_builder.h  response_parser.cc  response_parser.h  response_parser_depreated.cc  response_parser_depreated.h
v2.0/protocol/http/: base.h  request.cc  request.h  request_parser.cc  request_parser.h  response.cc  response.h  response_builder.cc
v2.0/reactor/: channel.cc  channel.h  epoller.cc  epoller.h  event_loop.cc  event_loop.h
v2.0/test/: CMakeLists.txt  IPAddress_test.cc  acceptor_test.cc  client.cc  config.yaml  connector_test.cc  http_buffer_test.cc  ipaddress_test.cc  net.cc  reactor.cc  reactor_Acceptor.cc  reactor_Socket.cc  reactor_socket_test.cc  reactor_test.cc  request_parser_http.cc  response_parse_fcgi.cc  response_parser_test.cc  tcp_http_buffer.cc  tcp_server_connection.cc  tcp_writequeue.cc
v2.0/utility/: dir.cc  file_reader.cc  logger.cc  logger.h  noncopyable.h
v2.0/utility/buffer/: buffer.cc  buffer.h  task.cc  task.h  writequeue.cc  writequeue.h
